package CCManagement;

public class CifraNegativaException extends Exception {
    public CifraNegativaException(String message) {
        super(message);
    }
}